k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args:
            - start-dev
            - --import-realm
            - --hostname=keycloak.local
            - --hostname-strict=false
            - --hostname-strict-https=false
            - --proxy-headers=xforwarded
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import/quizzapp-realm.json
              subPath: quizzapp-realm.json
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm
