k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    io.kompose.service: mongo
spec:
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
