k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "15432"
      port: 15432
      targetPort: 5432
  selector:
    io.kompose.service: postgres
