k8s/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: session
  name: session
spec:
  ports:
    - name: "3004"
      port: 3004
      targetPort: 3004
  selector:
    io.kompose.service: session
