k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: user
  name: user
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: user
